fix: align thumbnail in mobile web

--- a/src/app/blog/layout.module.scss
+++ b/src/app/blog/layout.module.scss
@@ -15,13 +15,19 @@
             margin-bottom: 1rem;
         }
 
-        a {
+        a { 
             display: flex;
             padding: 0.5rem;
             justify-content: left;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 0.5rem;
             transition: 0.3s cubic-bezier(0.47, 0, 0.745, 0.715);
+
+            .board-item-thumbnail {
+                background-color: var(--black-color);
+                display: flex;
+                justify-content: center;
+            }
 
             .board-item-info {
                 height: 100%;
@@ -50,6 +56,11 @@
         ul {
             padding: 1rem;
             width: 100%;
+
+            a { 
+                justify-content: center;
+                flex-direction: column;
+            }
         }
     }
 }
